@@ -1,1 +1,0 @@
-QT postgresql driver
