@@ -1,3 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1.1.1 2006/05/31 19:22:13 adam Exp $
-qt4/plugins/sqldrivers/libqsqlpsql.la
-@unexec ${RMDIR} %D/qt4/plugins/sqldrivers 2>/dev/null || ${TRUE}
